added functionality for the support and details to the home page